--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.8.0",
     "@stripe/react-stripe-js": "^3.7.0",
