Feat: Enhance order management by adding update and delete order functionalities; refactor Orders component to integrate new API calls and improve UI interactions.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.0",
     "@tailwindcss/vite": "^4.1.4",
+    "lucide-react": "^0.509.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
